--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ slider.oninput = function() {  //oninput is an event
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
 <script  src="js/index.js"></script>
 <script src="js/quiz.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.0/lottie.js"></script>
 <script src="js/lottie.js"></script>
 <script src="js/raccoon.js"></script>
 <script src="js/leaf.js"></script>
