--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/stylesheet.css">
+	<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.0/lottie.js'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/jsn6kgd.css">
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
@@ -15,8 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js" integrity="sha256-+9YNuItWuR4sbqeaNiJOxG0BvptYz4fbUXbIZoH5Jwo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.0/lottie.js"></script>
-<script src="js/lottie.js"></script>
 </head>
 <body>
 <nav id="myNav" class="overlay">
@@ -260,6 +259,7 @@ slider.oninput = function() {  //oninput is an event
 <script src="js/quiz.js"></script>
 <script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
+<script src="js/lottie.js"></script>
 <script  src="js/index.js"></script>
 <script src="js/raccoon.js"></script>
 <script src="js/leaf.js"></script>
