--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/stylesheet.css">
-	<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.0/lottie.js'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/jsn6kgd.css">
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
@@ -259,10 +258,10 @@ slider.oninput = function() {  //oninput is an event
 <script src="js/quiz.js"></script>
 <script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
-<script src="js/lottie.js"></script>
-<script  src="js/index.js"></script>
-<script src="js/raccoon.js"></script>
-<script src="js/leaf.js"></script>
+<script src="wildthoughts/js/lottie.js"></script>
+<script  src="wildthoughts/js/index.js"></script>
+<script src="wildthoughts/js/raccoon.js"></script>
+<script src="wildthoughts/js/leaf.js"></script>
 
 </body>
 </html>
