--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wild Thoughts Quiz Website</title>
-	<link rel='stylesheet prefetch' href='https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css'>
+	<link rel="stylesheet prefetch" href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css">
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/stylesheet.css">
