--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wild Thoughts Quiz Website</title>
-	<link rel="stylesheet prefetch" href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css">
-	<script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/stylesheet.css">
+	 <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/jsn6kgd.css">
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
@@ -35,7 +34,7 @@
     var controller = new ScrollMagic.Controller();
 </script>
 
-<section id="landing" >	<h1 data-aos="fade-up">Wild Thoughts</h1>
+<section id="landing" >	<h1 data-aos="fade-up" data-aos-duration="2000">Wild Thoughts</h1>
 		<h4>A Kellert Attitude Quiz</h4><div id="leaf_bg">
 		</div>
 		<div id="section04" class="demo">
@@ -259,6 +258,7 @@ slider.oninput = function() {  //oninput is an event
 <script src="js/quiz.js"></script>
 <script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
 <script src="wildthoughts/js/lottie.js"></script>
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
 <script  src="wildthoughts/js/index.js"></script>
 <script src="wildthoughts/js/raccoon.js"></script>
 <script src="wildthoughts/js/leaf.js"></script>
