--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ slider.oninput = function() {  //oninput is an event
 <script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.3/lottie.min.js"></script>
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
-<script  src="/js/index.js"></script>
-<script src="/js/raccoon.js"></script>
-<script src="/js/leaf.js"></script>
+<script  src="js/index.js"></script>
+<script src="js/raccoon.js"></script>
+<script src="js/leaf.js"></script>
 
 </body>
 </html>
