--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     var controller = new ScrollMagic.Controller();
 </script>
 
-<section id="landing" >	<h1>Wild Thoughts</h1>
+<section id="landing" >	<h1 data-aos="fade-up">Wild Thoughts</h1>
 		<h4>A Kellert Attitude Quiz</h4><div id="leaf_bg">
 		</div>
 		<div id="section04" class="demo">
